--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -46,6 +46,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-web": "^0.16.3",
     "styled-components": "^5.3.3"
