--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -37,11 +37,13 @@
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-calendars": "^1.1263.0",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-circular-progress-indicator": "^2.0.5",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-pager-view": "5.0.12",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "^2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
+    "@babel/preset-typescript": "^7.16.7",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/i18n-js": "^3.8.1",
     "@types/react": "~16.9.35",
