--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -36,13 +36,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^1.5.2",
-    "react-native-calendars": "^1.1263.0",
+    "react-native-calendars": "^1.1275.0",
     "react-native-chart-kit": "^6.11.0",
     "react-native-circular-progress-indicator": "^2.0.5",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-pager-view": "5.0.12",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "^2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.2.0",
@@ -60,7 +61,7 @@
     "@types/i18n-js": "^3.8.1",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "@types/react-native-calendars": "^1.505.3",
+    "@types/react-native-calendars": "^1.1264.3",
     "@types/styled-components-react-native": "^5.1.3",
     "eslint": "^7.28.0",
     "jest-expo": "^41.0.0",
