--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -27,6 +27,7 @@
     "expo-camera": "~11.0.2",
     "expo-constants": "~10.1.3",
     "expo-haptics": "~10.0.0",
+    "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "^9.1.0",
     "expo-localization": "~10.1.0",
     "expo-status-bar": "~1.0.4",
@@ -41,6 +42,7 @@
     "react-native-circular-progress-indicator": "^2.0.5",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-picker": "^4.7.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-pager-view": "5.0.12",
     "react-native-paper": "^4.11.2",
