--- a/AppSG/app.json
+++ b/AppSG/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "SouGerente",
-    "slug": "kirin-project",
-    "description": "React Native - Soft UI Kit",
+    "slug": "SOUGerente",
+    "description": "Sou Gerente",
     "primaryColor": "#CB0C9F",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -20,10 +20,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "SouGerente"
+      "bundleIdentifier": "com.sougerente.SouGerente"
     },
     "android": {
-      "package": "com.kirinzx.kirinproject",
+      "package": "com.sougerente.SouGerente",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png"
       }
