--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -44,6 +44,7 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "5.0.12",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "^2.3.1",
