--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -13,7 +13,7 @@
     "api": "http://192.168.1.6/8LIGHT/api_sougerente/index.php/"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.12.5",
@@ -21,54 +21,54 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.24.0",
     "dayjs": "^1.10.5",
-    "expo": "^41.0.1",
-    "expo-app-loading": "^1.0.3",
-    "expo-blur": "~9.0.3",
-    "expo-camera": "~11.0.2",
-    "expo-constants": "~10.1.3",
-    "expo-haptics": "~10.0.0",
-    "expo-image-picker": "~10.1.4",
-    "expo-linear-gradient": "^9.1.0",
-    "expo-localization": "~10.1.0",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-blur": "~11.0.0",
+    "expo-camera": "~12.1.0",
+    "expo-constants": "~13.0.1",
+    "expo-haptics": "~11.1.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.0",
+    "expo-localization": "~12.0.0",
+    "expo-status-bar": "~1.2.0",
     "i18n-js": "^3.8.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-calendars": "^1.1275.0",
     "react-native-chart-kit": "^6.11.0",
     "react-native-circular-progress-indicator": "^2.0.5",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-pager-view": "5.0.12",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "^2.3.1",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-svg": "12.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-touch-id": "^4.4.1",
-    "react-native-web": "^0.16.3",
+    "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
+    "@babel/core": "^7.12.9",
     "@babel/preset-typescript": "^7.16.7",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/i18n-js": "^3.8.1",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-calendars": "^1.1264.3",
     "@types/styled-components-react-native": "^5.1.3",
     "eslint": "^7.28.0",
-    "jest-expo": "^41.0.0",
-    "typescript": "^4.3.4"
+    "jest-expo": "^44.0.0",
+    "typescript": "~4.3.5"
   },
   "private": true,
   "jest": {
