--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^5.14.5",
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^0.24.0",
     "dayjs": "^1.10.5",
     "expo": "^44.0.0",
@@ -29,10 +30,6 @@
     "expo-blur": "~11.0.0",
     "expo-camera": "~12.1.0",
     "expo-constants": "~13.0.1",
-<<<<<<< Updated upstream
-=======
-    "expo-dev-client": "~0.8.0",
->>>>>>> Stashed changes
     "expo-haptics": "~11.1.0",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.0",
@@ -47,25 +44,15 @@
     "react-native-calendars": "^1.1275.0",
     "react-native-chart-kit": "^6.11.0",
     "react-native-circular-progress-indicator": "^2.0.5",
-<<<<<<< Updated upstream
-=======
-    "react-native-date-picker": "^4.1.3",
->>>>>>> Stashed changes
     "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.7.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-<<<<<<< Updated upstream
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-pager-view": "5.4.9",
-    "react-native-paper": "^4.11.2",
-=======
     "react-native-modal": "^13.0.0",
-    "react-native-modalize": "^2.0.13",
     "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.2",
     "react-native-picker-select": "^8.0.4",
->>>>>>> Stashed changes
     "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
