--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^6.0.6",
@@ -31,7 +30,7 @@
     "expo-camera": "~12.1.0",
     "expo-constants": "~13.0.1",
     "expo-haptics": "~11.1.0",
-    "expo-image-picker": "~12.0.1",
+    "expo-image-picker": "^12.0.1",
     "expo-linear-gradient": "~11.0.0",
     "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
