--- a/AppSG/package.json
+++ b/AppSG/package.json
@@ -32,6 +32,7 @@
     "expo-haptics": "~11.1.0",
     "expo-image-picker": "^12.0.1",
     "expo-linear-gradient": "~11.0.0",
+    "expo-local-authentication": "^12.1.0",
     "expo-localization": "~12.0.0",
     "expo-status-bar": "~1.2.0",
     "i18n-js": "^3.8.0",
